<resources>
    <string name="app_name">TeleCoop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TeleCoop</string>
    <string name="nav_header_subtitle">pro@telecoop.fr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_conseils">Conseils</string>
    <string name="menu_temps_positifs">Temps positifs</string>
    <string name="menu_quizz">Quizz</string>
    <string name="menu_dashboard">Tableau de bord</string>

    <string name="app_icon_desc">Icone de l\'application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>