<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_conseils"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_conseils" />
        <item
            android:id="@+id/nav_temps_positifs"
            android:title="@string/menu_temps_positifs"
            android:icon="@drawable/ic_menu_gallery" />
        <item
            android:id="@+id/nav_quizz"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_quizz" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
    </group>
</menu>